# temperature_logger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
weather_scraper/: CMakeLists.txt  weather_scraper.c  weather_scraper.conf.in
weather_scrubber/: weather_scraper.c
web_viewer/: CMakeLists.txt  index.html  live.js  web_server.c
web_viewer/web_site/: chart_example.js  index.html  live.js  styles.css
